# plotters

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  RELEASE-NOTES.md  publish.sh
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md  general-question.md  general-questions.md
.github/workflows/: bitmap.yml  ci.yml  coverage.yml  plotters-backend.yml  plotters-bitmap.yml  plotters-core.yml  plotters-svg.yml  push-check.yml  rust-clippy.yml  wasm.yml
backup/: grid.rs  plot.rs  region.rs
backup/backend/: svg.rs
benches/: main.rs
benches/benches/: data.rs  mod.rs  parallel.rs  rasterizer.rs
doc-template/: gen-toc.sh  readme.template.md  render_readme.sh  update_readme.sh
doc-template/examples/: chart.rs  composable_elements.rs  drawing_area.rs  drawing_backends.rs  elements.rs  quick_start.rs
doc-template/readme/: gallery
doc-template/rustdoc/: gallery  style
examples/: .chart.rs.swp  3d-plot.rs  3d-plot2.rs  README.md  animation.rs  area-chart.rs  blit-bitmap.rs  boxplot.rs  chart.rs  composable_elements.rs  console.rs  drawing_area.rs  drawing_backend.rs  elements.rs  errorbar.rs  evcxr-jupyter-integration.ipynb  full_palette.rs  histogram.rs  layout.rs  mandelbrot.rs  matshow.rs  nested_coord.rs  normal-dist.rs  normal-dist2.rs  pie.rs  quick_start.rs  relative_size.rs  sierpinski.rs  slc-temp.rs  snowflake.rs  stock.rs  tick_control.rs  two-scales.rs
examples/gtk-demo/: Cargo.toml
examples/gtk-demo/src/: main.rs
examples/minifb-demo/: Cargo.toml
examples/minifb-demo/src/: main.rs
examples/outputs/: style.css
examples/piston-demo/: Cargo.toml  README.md
examples/wasm-demo/: Cargo.toml  README.md  server.py  start-server.bat  start-server.sh
examples/wasm-demo/src/: func_plot.rs  lib.rs  mandelbrot.rs  plot3d.rs
examples/wasm-demo/www/: index.html  index.js  package.json  style.css
plotters/: Cargo.toml  RELEASE-NOTES.md  clippy.toml  publish.sh
plotters-backend/: Cargo.toml  README.md
plotters-backend/src/: error.rs  lib.rs  math_errors.rs  math_guard.rs  style.rs  text.rs
plotters-backend/src/rasterizer/: circle.rs  line.rs  mod.rs  path.rs  polygon.rs  rect.rs
plotters-bitmap/: Cargo.toml  README.md
plotters-bitmap/benches/: main.rs
plotters-bitmap/benches/benches/: mod.rs  parallel.rs  rasterizer.rs
plotters-bitmap/src/: bitmap.rs  error.rs  gif_support.rs  lib.rs
plotters-bitmap/src/bitmap/: target.rs  test.rs
plotters-bitmap/src/bitmap_pixel/: bgrx.rs  mod.rs  pixel_format.rs  rgb.rs
plotters-svg/: Cargo.toml  README.md
plotters-svg/src/: svg.rs
plotters/.github/: dependabot.yml
plotters/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
plotters/benches/: main.rs
plotters/benches/benches/: mod.rs  rasterizer.rs
plotters/doc-template/: update_readme.sh
plotters/doc-template/examples/: composable_elements.rs  elements.rs  quick_start.rs
plotters/examples/: 3d-plot.rs  3d-plot2.rs  README.md  animation.rs  area-chart.rs  blit-bitmap.rs  boxplot.rs  chart.rs  colormaps.rs  console.rs  customized_coord.rs  dynamic_font.rs  errorbar.rs  full_palette.rs  histogram.rs  interactive_tooltips.rs  mandelbrot.rs  matshow.rs  modern.rs  nested_coord.rs  normal-dist.rs  normal-dist2.rs  pie.rs  relative_size.rs  sierpinski.rs  slc-temp.rs  snowflake.rs  stock.rs  thick_lines.rs  tick_control.rs  two-scales.rs
plotters/examples/gtk-demo/: Cargo.toml
plotters/examples/gtk-demo/src/: main.rs
plotters/examples/minifb-demo/: Cargo.toml
plotters/examples/wasm-demo/: Cargo.toml  start-server.bat  start-server.sh
plotters/examples/wasm-demo/src/: func_plot.rs  lib.rs
plotters/examples/wasm-demo/www/: bootstrap.js  style.css
plotters/src/: evcxr.rs  lib.rs  test.rs
plotters/src/chart/: axes3d.rs  builder.rs  context.rs  dual_coord.rs  mesh.rs  mod.rs  series.rs  state.rs
plotters/src/chart/context/cartesian2d/: draw_impl.rs  mod.rs
plotters/src/chart/context/cartesian3d/: draw_impl.rs  mod.rs
plotters/src/chart/context/polar2d/: draw_impl.rs  mod.rs
plotters/src/chart/mesh/: cartesian.rs  polar.rs
plotters/src/coord/: mod.rs
plotters/src/coord/ranged1d/: discrete.rs  mod.rs
plotters/src/coord/ranged1d/combinators/: ckps.rs  group_by.rs  linspace.rs  logarithmic.rs  mod.rs  nested.rs  partial_axis.rs
plotters/src/coord/ranged1d/types/: datetime.rs  mod.rs  numeric.rs
plotters/src/coord/ranged2d/: cartesian.rs  mod.rs  polar.rs
plotters/src/coord/ranged3d/: projection.rs
plotters/src/data/: data_range.rs  mod.rs  quartiles.rs
plotters/src/drawing/: area.rs  mod.rs
plotters/src/drawing/backend_impl/: mocked.rs  mod.rs
plotters/src/element/: basic_shapes.rs  basic_shapes_3d.rs  boxplot.rs  dynelem.rs  errorbar.rs  image.rs  mod.rs  pie.rs  text.rs
plotters/src/series/: area_series.rs  histogram.rs  line_series.rs  mod.rs  point_series.rs  surface.rs
plotters/src/style/: color.rs  mod.rs  palette.rs  shape.rs  size.rs  text.rs
plotters/src/style/colors/: colormaps.rs  mod.rs
plotters/src/style/font/: ab_glyph.rs  context.rs  engine.rs  font_desc.rs  harfrust_engine.rs  migration.rs  mod.rs  naive.rs  system.rs  system_source.rs  ttf.rs  web.rs
plotters/tests/: font_migration.rs
plotters/tests/fixtures/: README.md
src/: .gitignore  backend.rs  bitmap.rs  chart.rs  color.rs  drawing.rs  evcxr.rs  font.rs  gif_support.rs  lib.rs  plattle.rs  region.rs  style.rs  svg.rs  test.rs  text.rs
src/backend/: bitmap.rs  mod.rs
src/bitmap/: target.rs
src/bitmap_pixel/: mod.rs  pixel_format.rs
src/chart/: axes3d.rs  builder.rs  context.rs  dual_coord.rs  mesh.rs  mod.rs  series.rs  state.rs
src/coord/: category.rs  ckps.rs  datetime.rs  discrete.rs  group_by.rs  linspace.rs  logarithmic.rs  mod.rs  nested.rs  numeric.rs  partial_axis.rs  ranged.rs  slice.rs  translate.rs
src/data/: data_range.rs  float.rs  line_series.rs  mod.rs  quartiles.rs
src/drawing/: area.rs  backend.rs  coord.rs  mod.rs
src/element/: basic_shapes.rs  basic_shapes_3d.rs  boxplot.rs  candlestick.rs  (+10 more)
(+78 files in other folders)
