[package]
name = "plotters"
version = "0.3.1"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rust drawing library focus on data plotting for both WASM and native applications"
repository = "https://github.com/38/plotters"
homepage = "https://plotters-rs.github.io/"
keywords = ["WebAssembly", "Visualization", "Plotting", "Drawing"]
categories = ["visualization", "wasm"]
readme = "README.md"
exclude = ["doc-template", "plotters-doc-data"]

[dependencies]
num-traits = "0.2.14"
chrono = { version = "0.4.19", optional = true }
plotters-svg = {version = "^0.3.*", optional = true}
base64 = "*"

[dependencies.plotters-backend]
version = "^0.3"

[dependencies.plotters-bitmap]
version = "^0.3"
optional = true
default_features = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ttf-parser = { version = "0.15.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
pathfinder_geometry = { version = "0.5.1", optional = true }
font-kit = { version = "0.11.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.image]
version = "0.23.14"
optional = true
default-features = false
features = ["jpeg", "png", "bmp"]

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.62"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.51"
features = [
         "Document",
         "DomRect",
         "Element",
         "HtmlElement",
         "Node",
         "Window",
         "HtmlCanvasElement",
         "CanvasRenderingContext2d",
]

[features]
default = [
        "bitmap_backend", "bitmap_encoder", "bitmap_gif",
        "svg_backend",
        "chrono",
        "ttf",
        "image",
        "deprecated_items",  "all_series", "all_elements",
        "full_palette"
]
all_series = ["area_series", "line_series", "point_series", "surface_series"]
all_elements = ["errorbar", "candlestick", "boxplot", "histogram"]

# Tier 1 Backends
bitmap_backend = ["plotters-bitmap", "ttf"]
bitmap_encoder = ["plotters-bitmap/image_encoder"]
bitmap_gif = ["plotters-bitmap/gif_backend"]
svg_backend = ["plotters-svg"]

# Colors
full_palette = []

# Elements
errorbar = []
candlestick = []
boxplot = []

# Series
histogram = []
area_series = []
line_series = []
point_series = []
surface_series = []

# Font implementation
ttf = ["font-kit", "ttf-parser", "lazy_static", "pathfinder_geometry"]
# dlopen fontconfig C library at runtime instead of linking at build time
# Can be useful for cross compiling, especially considering fontconfig has lots of C dependencies
fontconfig-dlopen = ["font-kit/source-fontconfig-dlopen"]

# Misc
datetime = ["chrono"]
evcxr = ["svg_backend", "bitmap_backend", "image"]
deprecated_items = [] # Keep some of the deprecated items for backward compatibility

[dev-dependencies]
itertools = "0.10.0"
criterion = "0.3.4"
rayon = "1.5.1"
serde_json = "1.0.64"
serde = "1.0.126"
serde_derive = "1.0.126"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rand = "0.8.3"
rand_distr = "0.4.0"
rand_xorshift = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.24"

[[bench]]
name = "benchmark"
harness = false
path = "benches/main.rs"
