[package]
name = "plotters-bitmap"
version = "0.3.1"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Plotters Bitmap Backend"
homepage = "https://plotters-rs.github.io"
repository = "https://github.com/plotters-rs/plotters-bitmap"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = { version = "0.11.2", optional = true }

[dependencies.plotters-backend]
git = "https://github.com/plotters-rs/plotters-backend"
# version = "0.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.image]
version = "0.23.14"
optional = true
default-features = false
features = ["jpeg", "png", "bmp"]

[features]
default = ["image_encoder", "gif_backend"]
image_encoder = ["image"]
gif_backend = ["gif", "image_encoder"]

[dev-dependencies.plotters]
default_features = false
features = ["ttf"]
git = "https://github.com/plotters-rs/plotters"
# version = "0.3.1"
