[package]
name = "plotters-svg"
version = "0.4.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Plotters SVG backend"
homepage = "https://plotters-rs.github.io"
repository = "https://github.com/plotters-rs/plotters-svg.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.plotters-backend]
path = "../plotters-backend"

[features]
debug = []

[dev-dependencies.plotters]
default_features = false
features = ["ttf"]
path = "../plotters"
