[package]
name = "minifb-demo"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.13.0"
plotters = { path = "../.." , default_features = false, features = ["bitmap"]}
