[package]
name = "wasm-demo"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

[lib]
crate-type=["cdylib"]

[dependencies]
plotters = {path = "../..", default_features = false, features = ["line_series"]  }
plotters-canvas = "0.1.*"
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.39", features = ["HtmlCanvasElement"] }

[profile.release]
lto = true
