[package]
name = "gtk-demo"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = {path = "../.."}
cairo-rs = "^0.9"
gtk = "^0.9"
gio = "^0.9"

[dependencies.plotters-cairo]
git = "https://github.com/plotters-rs/plotters-cairo"
# version = "0.3.1"
