[package]
name = "minifb-demo"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.23.0"
plotters = {path = "../..", default_features = false, features = ["ttf"]}

[dependencies.plotters-bitmap]
default_features = false
git = "https://github.com/plotters-rs/plotters-bitmap"
# version = "0.3.1"
