[package]
name = "wasm-demo"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2018"

[lib]
crate-type=["cdylib"]

[dependencies]
plotters = {git = "https://github.com/plotters-rs/plotters"}
wasm-bindgen = "0.2.62"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.39", features = ["HtmlCanvasElement"] }

[dependencies.plotters-canvas]
git = "https://github.com/plotters-rs/plotters-canvas"
# version = "0.3.1"

[profile.release]
lto = true

[workspace]
